# 02516-IDLCV

./: .gitignore  README.md  pyproject.toml
content/part-2-video/1-using-hpc/: README.md  jobscript.sh  simple_script.py
content/part-2-video/project/: .env.example  .gitignore  README.md  config.py  datasets.py  jobscript.sh  main.py  pipeline.py  train.py  train_single_frame.py
content/part-2-video/project/data/: dataloaders.py  datasets.py  transforms.py
content/part-2-video/project/metrics/: tracker.py
content/part-2-video/project/models/: C3D.py  early_fusion.py  late_fusion.py  single_frame.py  training.py
content/part-2-video/project/models/two_stream/: vgg8.py
content/part-2-video/project/results/single-frame/: training_metrics.csv
content/part-2-video/project/utils/: logger.py  plotter.py
content/part-3-segmentation/project/: config.py  train.py
content/part-3-segmentation/project/data/: transforms.py
content/part-3-segmentation/project/losses/: loss.py
content/part-3-segmentation/project/metrics/: classification.py  collection.py
content/part-3-segmentation/project/models/: early_fusion.py  single_frame.py
content/part-3-segmentation/project/results/single-frame/: evaluate_model.py  test_results.csv
content/part-3-segmentation/project/utils/: timer.py
exercises/part-1-image/: README.md
exercises/part-2-video/1-using-hpc/: README.md
